--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 
         <div class="weather-body">
-            <img src="assets/cloud.png" alt="weather image" class="weather-img">
+            <img src="cloud.png" alt="weather image" class="weather-img">
 
             <div class="weather-box">
                 <p class="temperature">0 <sup>°C</sup></p> 
